This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

20-Nov-2001 (Lars Duening)
    - (exec.h, lex.c, prolang, object, gcollect.c, typedefs.h) Added
        complete include file information to compiled programs.
    - (object.c) Implemented efun include_list() properly.

19-Nov-2001 (Lars Duening)  (3.3.127)
    - (sprintf.c) It was possible to instruct sprintf to format a string
        as both columns and as a table. sprintf() then formatted it as
        columns, but any error (like buffer overflow) would crash the
        driver. The error recovery is now more robust, and such an invalid
        format string is rejected (reported by Menaures).
    - (sprintf.c) Max size of the result is now 128 KByte.
    - (lex.c) A H_AUTO_INCLUDE closure also receives a flag telling if
        it was a <>-type include or not (suggested by Freaky).
    - (bitstrings.c) Efuns and_bits(), or_bits(), xor_bits() mishandled
        the bits 5, 11, 17, ... (thanks, Fuchur!)
    - (prolang.y) The bugfix yesterday was not quite correct: a pair
        of missing parentheses completely changed the meaning of the
        check for private inherited functions, causing the driver to crash
        (reported by Freaky).

18-Nov-2001 (Lars Duening)  (3.3.126)
    - (object.c) Efun inherit_list: the tagging of virtual inherits
        returned a random value for the main program (reported by Freaky).
    - (prolang.y) Inherited private functions could hide simul-efuns
        or efuns (reported by Gnomi).
    - (lex.c) If H_AUTO_INCLUDE is set to a closure, it will be called
        for all files opened by the lexer. A second argument passed to
        the closure determines whether the call is for the object file
        itself or for an included file (suggested by Freaky).
    - (func_spec, array, exec.h, prolang.y) New efun include_list()
        to return the filenames read when compiling a program.